Fixed logo not showing up. Made region selection page look better.

--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -128,7 +128,7 @@ table {
 nav {
   width: 100%;
   height: 60px;
-  padding-left: 20px;
+  padding-left: 50px;
   background: #4C1E4F;
   background: linear-gradient(141deg, #4C1E4F 0%, #FA7E62 100%);
   border-bottom: 5px solid #FA7E62;
@@ -136,6 +136,9 @@ nav {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+}
+nav .logo {
+  height: 100%;
 }
 nav select {
   width: 200px;
@@ -219,6 +222,37 @@ nav div figure img {
   height: 220px;
   margin: 10px;
   background: #FFF3E9;
+}
+.region-selection {
+  width: 100%;
+  height: calc(100vh - 60px);
+  background: linear-gradient(45deg, #4c1e4f 0%, #fa7e62 100%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.region-selection h1 {
+  font-size: 24px;
+}
+.region-selection div {
+  width: 300px;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.region-selection div a {
+  width: 250px;
+  padding: 10px 0;
+  text-align: center;
+  font-size: 18px;
+  text-decoration: none;
+  color: #000000;
+  border: 2px solid #000000;
+  border-radius: 5px;
+  background: rgba(255, 255, 255, 0.5);
 }
 .auth-form {
   display: flex;
